src/components/Footer/Footer.scss
$footerColor: transparent;

footer {
  padding-bottom: 50px;
  padding-top: 100px;
  background-color: $footerColor;
  color: var(--color-black);

  p {
    font-size: 1rem;

    .icon {
      vertical-align: middle;
    }
  }

  ::selection {
    background-color: var(--color-black);
    color: var(--color-white);
  }

  li {
    font-size: 1rem;
  }

  .wrapper {
    margin-left: 20px;
    margin-right: 0;
    margin-bottom: 50px;
  }
}

